--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "universal-cookie": "^7.1.4"
   }
 }
